<resources>
    <string name="app_name">SegDocuments</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_registrar_e_s">Registrar E/S</string>
    <string name="menu_bitacora">Bitácora</string>
    <string name="menu_registro">Nuevo Registro</string>
    <string name="menu_ver_regitros">Ver Registros</string>
    <string name="menu_reg_entrada">Registrar Entrada</string>
    <string name="menu_reg_salida">Registrar Salida</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="VerMapa">Ver Mapa</string>
    <string name="VerSalidas">Ver Salidas</string>

</resources>