<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_registrar_entrada"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/menu_reg_entrada" />
        <item
            android:id="@+id/nav_registrar_salida"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_reg_salida" />
        <item
            android:id="@+id/nav_registro"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_registro" />
        <item
            android:id="@+id/nav_bitacora"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_bitacora" />
        <item
            android:id="@+id/nav_ver_registro"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_ver_regitros" />

    </group>
</menu>